--- a/app/src/main/res/layout/students_list.xml
+++ b/app/src/main/res/layout/students_list.xml
@@ -16,7 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="25dp"
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/red"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/student_list"
