--- a/app/src/main/res/layout/chose.xml
+++ b/app/src/main/res/layout/chose.xml
@@ -15,9 +15,11 @@
         android:layout_height="wrap_content"
         android:text="@string/new_student"
         android:textSize="25sp"
+        android:textColor="@color/background_blue"
         android:padding="15dp"
         android:textAllCaps="false"
-        android:layout_marginBottom="25dp"/>
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/chose_btn"/>
 
     <Button
         android:id="@+id/show_all_student"
@@ -25,7 +27,9 @@
         android:layout_height="wrap_content"
         android:text="@string/show_all_student"
         android:textSize="25sp"
+        android:textColor="@color/background_blue"
         android:padding="15dp"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:background="@drawable/chose_btn"/>
 
 </LinearLayout>
