--- a/app/src/main/res/layout/semester.xml
+++ b/app/src/main/res/layout/semester.xml
@@ -3,35 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Semester"
-    android:gravity="center"
-    android:padding="15dp"
     android:background="@color/dark_purple"
-    android:orientation="vertical">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="15dp"
+    tools:context=".Semester">
 
     <Button
         android:id="@+id/first_semester"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/first_semester"
-        android:textSize="25sp"
-        android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:padding="20dp"
-        android:textAllCaps="false"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/first_semester"
-        android:layout_marginBottom="20dp"/>
+        android:padding="20dp"
+        android:text="@string/first_semester"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/second_semester"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/second_semester"
-        android:textSize="25sp"
-        android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:padding="20dp"
-        android:textAllCaps="false"
+        android:layout_marginTop="20dp"
         android:background="@drawable/second_semester"
-        android:layout_marginTop="20dp"/>
+        android:padding="20dp"
+        android:text="@string/second_semester"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="25sp" />
 </LinearLayout>
